iac/zfgc.com/base/deployment-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: $(NAMESPACE)
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-vol
      volumes:
      - name: postgres-vol
        hostPath:
          path: $(postgres.directory)
