iac/zfgc.com/base/service-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: $(NAMESPACE)
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
